<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_otp_screen_image"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/enter_otp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:text="@string/we_have_sent_you_otp_for_phone_number_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/verifyotp_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="verifyOTPBtn"
        android:text="@string/verify_otp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPinView" />

    <TextView
        android:id="@+id/fillotp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyotp_btn_id" />

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:hint="@string/hint_pinview"
        android:inputType="number"
        android:itemBackground="#65EAEAEA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@android:color/black"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="35dp"
        app:itemRadius="5dp"
        app:itemWidth="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lineWidth="1dp"
        app:viewType="rectangle" />

    <ProgressBar
        android:id="@+id/verifyprogressbar2_id"
        style="?android:attr/progressBarStyle"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="16dp"
        android:theme="@style/AppTheme.WhiteAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/verifyotp_btn_id"
        app:layout_constraintEnd_toEndOf="@+id/verifyotp_btn_id"
        app:layout_constraintTop_toTopOf="@+id/verifyotp_btn_id" />

</androidx.constraintlayout.widget.ConstraintLayout>